tests/parse-fail/bad_module2.fl
pub mod foo {
}

pub mod {
}
